# timesheet

./: .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  licence.md  out.txt  pyproject.toml  readme.md  requirements.txt  samconfig.toml  template.yml
.aws-sam/: build.toml
.devcontainer/: devcontainer.json
.github/workflows/: CI-CD-pipeline.yml
src/: app copy.py  app.py
src/pycaltime/: __init__.py  app.py  aws.py  bank_holidays.py  calendar.py  config.py  google.py  project.py  storage.py  utils.py
src/pycaltime/auth/: __init__.py  google.py
src/pycaltime/dashboard/: __init__.py  about.py  holiday.py  home.py  mileage.py  settings.py  timesheet.py
src/pycaltime/dashboard/templates/: about.html  holiday.html  home.html  mileage.html  settings.html
src/pycaltime/static/: index.html  main.css
src/pycaltime/templates/: layout.html  nav.html  table.html
src/pycaltime/timesheet/: __init__.py  show.py
src/pycaltime/timesheet/templates/: show.html
src/pycaltime/user/: user_home.py
src/templates/: table.html
